--- a/posts/writing/generating-images.mdx
+++ b/posts/writing/generating-images.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Statically Generating Screenshots"
-publishedAt: "Jan 23"
-description: "Automatically generating screenshots at an interval of time with Github Actions."
+publishedAt: "Mar 13"
+description: "Automatically generating screenshots at an interval of time with Github Actions and serving them statically."
 status: "public"
 ---
 
