--- a/posts/writing/generating-images.mdx
+++ b/posts/writing/generating-images.mdx
@@ -67,7 +67,7 @@ I’ve chose this due to its strong configuration out of the box, which tricks 
 
 ### Image Optimisation
 
-Optimisation is such a vast topic to tackle, however what we’re looking for from _this example_ is to render small sized images which are being preloaded.
+Optimisation is such a vast topic to tackle, however what we’re looking for from this article in terms of optimisation is to render small sized images which are being preloaded.
 
 #### Preloading Images
 
