--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Marius Florescu"
-publishedAt: "Jan 01"
-description: "Fullstack developer @ Victory Square Partners"
-status: "public"
+title: 'Marius Florescu'
+publishedAt: 'Jan 01'
+description: 'Fullstack developer @ Victory Square Partners'
+status: 'public'
 ---
 
 #### hi there, I'm Marius 👋🏽
